Fix trimmed selections in scrollback buffer

Commits 4e69f47b and 9046680f where using an incorrect start of buffer
when trimming trailing spaces and trailing empty cells in a line from
the scrollback buffer.  This could cause too short of a text to be
copied from the selection when there were trailing spaces in the
selection.

BUG: 461542
CCBUG: 455165
(cherry picked from commit f01fdd0a55726e60f068e72573d0323129a10eb1)